# P1_CalibracionCamara

./: README.md
Calibracion_Code/CalibrationOpenCV/: Calibration.pro.user.3.2-pre1  main.cpp
Calibracion_Code/RCirculos/: KFTracking.cpp  RCirculos.pro  RCirculos.pro.user.3.2-pre1  RCirculos.pro.user.8369cf1  RCirculos.pro.user.a834e11  RCirculos.pro.user.f69cbbd  cameracalibrator.cpp  cameracalibrator.h  constantParams.h  image.h  kftracking.cpp  kftracking.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  patterndetector.cpp  patterndetector.h
Calibracion_Code/build-RCirculos-Desktop-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
Trabajo 1/Demos/Semana4/: DemosOnLineYoutube.md  README.md
Trabajo 1/codigo/: Readme  Readme.md
Trabajo 1/codigo/CalibrationOpenCV/: Calibration.pro.autosave  Calibration.pro.user.03fb00c.4.8-pre1  main.cpp
Trabajo 1/codigo/RCirculos/: Geometria.h  KFTracking.cpp  RCirculos.pro  RCirculos.pro.user.03fb00c  RCirculos.pro.user.1.3  RCirculos.pro.user.27f8ab7  Statistics.h  cameracalibrator.cpp  cameracalibrator.cpp.autosave  cameracalibrator.h  image.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  patterndetector.cpp  patterndetector.h  trackingGrid.cpp  trackingGrid.h
Trabajo 1/codigo/build-Calibration-Desktop-Debug/: .Makefile.swo  .Makefile.swp  Calibration  Makefile  in_VID5.xml  moc_mainwindow.cpp  out_camera_data.xml
Trabajo 2/codigo/Avance1/vrn_torch/code_MeshView/malla/: CMakeCache.txt  CMakeLists.txt  Makefile  Malla.cpp  cmake_install.cmake  fshader.glsl  malla  practica04  vshader.glsl
(+13 files in other folders)
